--- a/apps/api/views/index.html
+++ b/apps/api/views/index.html
@@ -18,6 +18,7 @@
         <h5 class="text-center font-weight">Integrantes</h5>
         <h6 class="text-center font-weight">Brayan Leandro Diaz Rodriguez</h6>
         <h6 class="text-center font-weight">Jorge Lopez Mutumbajoy</h6>
+		<h6 class="text-center font-weight">Nicolas Ledesma Fajardo</h6>
         <h6 class="text-center font-weight">Ingenieria de Sistemas</h6>
     </div>
 </body>
